--- a/website/homepage.html
+++ b/website/homepage.html
@@ -96,7 +96,7 @@
                             <img src="../../images/RE LOGO.png" width="70px" height="70px">
                         </a>
                         
-                    <h1> Welcome to the Royal Enfield Showroom</h1>
+                    <h1> Welcome to the git hub</h1>
                     
                     <div class="dropdown show">
                         <img  class="profile" for="dropdownMenuLink"
