--- a/website/homepage.html
+++ b/website/homepage.html
@@ -95,8 +95,8 @@
                         <a class="navbar-brand" href="#">
                             <img src="../../images/RE LOGO.png" width="70px" height="70px">
                         </a>
-                        
-                   <h2>previous hedding is deleted</h2>
+                    <h1>Welcome to the Royal Enfield Showroom</h1>
+                   <h2>The above heading is deleted and added again</h2>
 
                     
                     <div class="dropdown show">
