--- a/website/homepage.html
+++ b/website/homepage.html
@@ -97,6 +97,7 @@
                         </a>
                     <h1>Welcome to the Royal Enfield Showroom</h1>
                    <h2>The above heading is deleted and added again</h2>
+                   <p>adding the changes and typing init command and click on checkmark</p>
 
                     
                     <div class="dropdown show">
