message can be anything

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -97,7 +97,8 @@
                         </a>
                     <h1>Welcome to the Royal Enfield Showroom</h1>
                    <h2>The above heading is deleted and added again</h2>
-                   <p>adding the changes and typing init command and click on checkmark</p>
+                   <h3>adding the changes and typing init command and click on checkmark</h3>
+                   <p>after adding init it will ask sync changes which involves both pull and push</p>
 
                     
                     <div class="dropdown show">
