--- a/website/homepage.html
+++ b/website/homepage.html
@@ -88,7 +88,7 @@
     </head>
     <body>
 
-        <div id="homepage">
+        <div style="color: red" id="homepage">
             <div class="header d-flex flex-row w-100">
                 <nav class="navbar navbar-expand-lg navbar-light w-100">
                     <div class="container">
