font color is deleted

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -107,7 +107,7 @@
 
 <body>
 
-    <div style="color: red" id="homepage">
+    <div id="homepage">
         <div class="header d-flex flex-row w-100">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <div class="container">
